TP4/obj/tp4.output
Estado 63 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 119 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 186 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 188 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 191 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 339 conflictos: 1 desplazamiento(s)/reducción(ones)


Gramática

    0 $accept: translation_unit $end

    1 constant: DEC_CONST
    2         | OCT_CONST
    3         | HEX_CONST
    4         | REAL_CONST
    5         | CHAR_CONST

    6 primary_expression: IDENTIFIER
    7                   | constant
    8                   | STR_LIT
    9                   | '(' expression ')'

   10 postfix_expression: primary_expression
   11                   | postfix_expression '[' expression ']'
   12                   | postfix_expression '(' argument_expression_list_opt ')'
   13                   | postfix_expression '.' IDENTIFIER
   14                   | postfix_expression PTR_OP IDENTIFIER
   15                   | postfix_expression INC_OP
   16                   | postfix_expression DEC_OP

   17 argument_expression_list: assignment_expression
   18                         | argument_expression_list ',' assignment_expression

   19 unary_expression: postfix_expression
   20                 | INC_OP unary_expression
   21                 | DEC_OP unary_expression
   22                 | unary_operator cast_expression
   23                 | SIZEOF unary_expression
   24                 | SIZEOF '(' type_name ')'

   25 unary_operator: '&'
   26               | '*'
   27               | '+'
   28               | '-'
   29               | '~'
   30               | '!'

   31 cast_expression: unary_expression
   32                | '(' type_name ')' cast_expression

   33 multiplicative_expression: cast_expression
   34                          | multiplicative_expression '*' cast_expression
   35                          | multiplicative_expression '/' cast_expression
   36                          | multiplicative_expression '%' cast_expression

   37 additive_expression: multiplicative_expression
   38                    | additive_expression '+' multiplicative_expression
   39                    | additive_expression '-' multiplicative_expression

   40 shift_expression: additive_expression
   41                 | shift_expression LEFT_OP additive_expression
   42                 | shift_expression RIGHT_OP additive_expression

   43 relational_expression: shift_expression
   44                      | relational_expression '<' shift_expression
   45                      | relational_expression '>' shift_expression
   46                      | relational_expression LE_OP shift_expression
   47                      | relational_expression GE_OP shift_expression

   48 equality_expression: relational_expression
   49                    | equality_expression EQ_OP relational_expression
   50                    | equality_expression NE_OP relational_expression

   51 and_expression: equality_expression
   52               | and_expression '&' equality_expression

   53 exclusive_or_expression: and_expression
   54                        | exclusive_or_expression '^' and_expression

   55 inclusive_or_expression: exclusive_or_expression
   56                        | inclusive_or_expression '|' exclusive_or_expression

   57 logical_and_expression: inclusive_or_expression
   58                       | logical_and_expression AND_OP inclusive_or_expression

   59 logical_or_expression: logical_and_expression
   60                      | logical_or_expression OR_OP logical_and_expression

   61 conditional_expression: logical_or_expression
   62                       | logical_or_expression '?' expression ':' conditional_expression

   63 assignment_expression: conditional_expression
   64                      | unary_expression assignment_operator assignment_expression

   65 assignment_operator: '='
   66                    | MUL_ASSIGN
   67                    | DIV_ASSIGN
   68                    | MOD_ASSIGN
   69                    | ADD_ASSIGN
   70                    | SUB_ASSIGN
   71                    | LEFT_ASSIGN
   72                    | RIGHT_ASSIGN
   73                    | AND_ASSIGN
   74                    | XOR_ASSIGN
   75                    | OR_ASSIGN

   76 expression: assignment_expression
   77           | expression ',' assignment_expression

   78 constant_expression: conditional_expression

   79 declaration: declaration_specifiers init_declarator_list_opt ';'
   80            | error ';'

   81 declaration_specifiers: storage_class_specifier declaration_specifiers_opt
   82                       | type_specifier declaration_specifiers_opt
   83                       | type_qualifier declaration_specifiers_opt

   84 init_declarator_list: init_declarator
   85                     | init_declarator_list ',' init_declarator

   86 init_declarator: declarator
   87                | declarator '=' initializer

   88 storage_class_specifier: TYPEDEF
   89                        | EXTERN
   90                        | STATIC
   91                        | AUTO
   92                        | REGISTER

   93 type_specifier: VOID
   94               | CHAR
   95               | SHORT
   96               | INT
   97               | LONG
   98               | FLOAT
   99               | DOUBLE
  100               | SIGNED
  101               | UNSIGNED
  102               | struct_or_union_specifier
  103               | enum_specifier

  104 struct_or_union_specifier: struct_or_union identifier_opt '{' struct_declaration_list '}'
  105                          | struct_or_union IDENTIFIER

  106 struct_or_union: STRUCT
  107                | UNION

  108 struct_declaration_list: struct_declaration
  109                        | struct_declaration_list struct_declaration

  110 struct_declaration: specifier_qualifier_list struct_declarator_list ';'

  111 specifier_qualifier_list: type_specifier specifier_qualifier_list_opt
  112                         | type_qualifier specifier_qualifier_list_opt

  113 struct_declarator_list: struct_declarator
  114                       | struct_declarator_list ',' struct_declarator

  115 struct_declarator: declarator
  116                  | declarator_opt ':' constant_expression

  117 enum_specifier: ENUM identifier_opt '{' enumerator_list '}'
  118               | ENUM IDENTIFIER

  119 enumerator_list: enumerator
  120                | enumerator_list ',' enumerator

  121 enumerator: IDENTIFIER
  122           | IDENTIFIER '=' constant_expression

  123 type_qualifier: CONST
  124               | VOLATILE

  125 declarator: direct_declarator
  126           | pointer direct_declarator

  127 direct_declarator: IDENTIFIER
  128                  | '(' declarator ')'
  129                  | direct_declarator '[' constant_expression_opt ']'
  130                  | direct_declarator '(' parameter_type_list ')'
  131                  | direct_declarator '(' identifier_list_opt ')'

  132 pointer: '*' type_qualifier_list_opt
  133        | '*' type_qualifier_list_opt pointer

  134 type_qualifier_list: type_qualifier
  135                    | type_qualifier_list type_qualifier

  136 parameter_type_list: parameter_list
  137                    | parameter_list ',' ELLIPSIS

  138 parameter_list: parameter_declaration
  139               | parameter_list ',' parameter_declaration

  140 parameter_declaration: declaration_specifiers declarator
  141                      | declaration_specifiers abstract_declarator_opt

  142 identifier_list: IDENTIFIER
  143                | identifier_list ',' IDENTIFIER

  144 type_name: specifier_qualifier_list abstract_declarator_opt

  145 abstract_declarator: pointer
  146                    | pointer_opt direct_abstract_declarator

  147 direct_abstract_declarator_opt: /* vacío */
  148                               | direct_abstract_declarator

  149 direct_abstract_declarator: '(' abstract_declarator ')'
  150                           | direct_abstract_declarator_opt '[' constant_expression_opt ']'
  151                           | direct_abstract_declarator_opt '(' parameter_type_list_opt ')'

  152 initializer: assignment_expression
  153            | '{' initializer_list '}'
  154            | '{' initializer_list ',' '}'

  155 initializer_list: initializer
  156                 | initializer_list ',' initializer

  157 statement: labeled_statement
  158          | compound_statement
  159          | expression_statement
  160          | selection_statement
  161          | iteration_statement
  162          | jump_statement
  163          | error ';'

  164 $@1: /* vacío */

  165 labeled_statement: IDENTIFIER ':' $@1 statement

  166 $@2: /* vacío */

  167 labeled_statement: CASE $@2 constant_expression ':' statement

  168 $@3: /* vacío */

  169 labeled_statement: DEFAULT $@3 ':' statement

  170 $@4: /* vacío */

  171 compound_statement: '{' $@4 declaration_list_opt statement_list_opt '}'

  172 declaration_list: declaration
  173                 | declaration_list declaration

  174 statement_list: statement
  175               | statement_list statement

  176 expression_statement: expression_opt ';'

  177 $@5: /* vacío */

  178 selection_statement: IF $@5 if_block

  179 $@6: /* vacío */

  180 selection_statement: SWITCH $@6 '(' expression ')' statement

  181 if_block: '(' expression ')' statement
  182         | '(' expression ')' statement ELSE statement

  183 $@7: /* vacío */

  184 iteration_statement: WHILE $@7 '(' expression ')' statement

  185 $@8: /* vacío */

  186 iteration_statement: DO $@8 statement WHILE '(' expression ')' ';'

  187 $@9: /* vacío */

  188 iteration_statement: FOR $@9 '(' expression_statement expression_statement expression_opt ')' statement

  189 jump_statement: GOTO IDENTIFIER ';'
  190               | CONTINUE ';'
  191               | BREAK ';'
  192               | RETURN expression_opt ';'

  193 translation_unit: external_declaration
  194                 | translation_unit external_declaration

  195 external_declaration: function_definition
  196                     | declaration

  197 function_definition: declaration_specifiers declarator declaration_list_opt compound_statement
  198                    | error '}'

  199 argument_expression_list_opt: /* vacío */
  200                             | argument_expression_list

  201 init_declarator_list_opt: /* vacío */
  202                         | init_declarator_list

  203 declaration_specifiers_opt: /* vacío */
  204                           | declaration_specifiers

  205 identifier_opt: /* vacío */
  206               | IDENTIFIER

  207 specifier_qualifier_list_opt: /* vacío */
  208                             | specifier_qualifier_list

  209 declarator_opt: /* vacío */
  210               | declarator

  211 constant_expression_opt: /* vacío */
  212                        | constant_expression

  213 identifier_list_opt: /* vacío */
  214                    | identifier_list

  215 type_qualifier_list_opt: /* vacío */
  216                        | type_qualifier_list

  217 abstract_declarator_opt: /* vacío */
  218                        | abstract_declarator

  219 pointer_opt: /* vacío */
  220            | pointer

  221 parameter_type_list_opt: /* vacío */
  222                        | parameter_type_list

  223 declaration_list_opt: /* vacío */
  224                     | declaration_list

  225 statement_list_opt: /* vacío */
  226                   | statement_list

  227 expression_opt: /* vacío */
  228               | expression


Terminales con las reglas donde aparecen

$end (0) 0
'!' (33) 30
'%' (37) 36
'&' (38) 25 52
'(' (40) 9 12 24 32 128 130 131 149 151 180 181 182 184 186 188
')' (41) 9 12 24 32 128 130 131 149 151 180 181 182 184 186 188
'*' (42) 26 34 132 133
'+' (43) 27 38
',' (44) 18 77 85 114 120 137 139 143 154 156
'-' (45) 28 39
'.' (46) 13
'/' (47) 35
':' (58) 62 116 165 167 169
';' (59) 79 80 110 163 176 186 189 190 191 192
'<' (60) 44
'=' (61) 65 87 122
'>' (62) 45
'?' (63) 62
'[' (91) 11 129 150
']' (93) 11 129 150
'^' (94) 54
'{' (123) 104 117 153 154 171
'|' (124) 56
'}' (125) 104 117 153 154 171 198
'~' (126) 29
error (256) 80 163 198
IDENTIFIER (258) 6 13 14 105 118 121 122 127 142 143 165 189 206
DEC_CONST (259) 1
OCT_CONST (260) 2
HEX_CONST (261) 3
REAL_CONST (262) 4
CHAR_CONST (263) 5
STR_LIT (264) 8
MUL_ASSIGN (265) 66
DIV_ASSIGN (266) 67
MOD_ASSIGN (267) 68
ADD_ASSIGN (268) 69
SUB_ASSIGN (269) 70
RIGHT_ASSIGN (270) 72
LEFT_ASSIGN (271) 71
AND_ASSIGN (272) 73
XOR_ASSIGN (273) 74
OR_ASSIGN (274) 75
OR_OP (275) 60
AND_OP (276) 58
EQ_OP (277) 49
NE_OP (278) 50
LE_OP (279) 46
GE_OP (280) 47
LEFT_OP (281) 41
RIGHT_OP (282) 42
INC_OP (283) 15 20
DEC_OP (284) 16 21
PTR_OP (285) 14
SIZEOF (286) 23 24
TYPEDEF (287) 88
STATIC (288) 90
AUTO (289) 91
REGISTER (290) 92
EXTERN (291) 89
VOID (292) 93
CHAR (293) 94
SHORT (294) 95
INT (295) 96
LONG (296) 97
FLOAT (297) 98
DOUBLE (298) 99
SIGNED (299) 100
UNSIGNED (300) 101
CONST (301) 123
VOLATILE (302) 124
STRUCT (303) 106
UNION (304) 107
ELLIPSIS (305) 137
ENUM (306) 117 118
IF (307) 178
ELSE (308) 182
SWITCH (309) 180
WHILE (310) 184 186
DO (311) 186
FOR (312) 188
CASE (313) 167
DEFAULT (314) 169
CONTINUE (315) 190
BREAK (316) 191
RETURN (317) 192
GOTO (318) 189


No terminales con las reglas donde aparecen

$accept (88)
    en la izquierda: 0
constant (89)
    en la izquierda: 1 2 3 4 5, en la derecha: 7
primary_expression (90)
    en la izquierda: 6 7 8 9, en la derecha: 10
postfix_expression (91)
    en la izquierda: 10 11 12 13 14 15 16, en la derecha: 11 12 13
    14 15 16 19
argument_expression_list (92)
    en la izquierda: 17 18, en la derecha: 18 200
unary_expression (93)
    en la izquierda: 19 20 21 22 23 24, en la derecha: 20 21 23 31
    64
unary_operator (94)
    en la izquierda: 25 26 27 28 29 30, en la derecha: 22
cast_expression (95)
    en la izquierda: 31 32, en la derecha: 22 32 33 34 35 36
multiplicative_expression (96)
    en la izquierda: 33 34 35 36, en la derecha: 34 35 36 37 38 39
additive_expression (97)
    en la izquierda: 37 38 39, en la derecha: 38 39 40 41 42
shift_expression (98)
    en la izquierda: 40 41 42, en la derecha: 41 42 43 44 45 46 47
relational_expression (99)
    en la izquierda: 43 44 45 46 47, en la derecha: 44 45 46 47 48
    49 50
equality_expression (100)
    en la izquierda: 48 49 50, en la derecha: 49 50 51 52
and_expression (101)
    en la izquierda: 51 52, en la derecha: 52 53 54
exclusive_or_expression (102)
    en la izquierda: 53 54, en la derecha: 54 55 56
inclusive_or_expression (103)
    en la izquierda: 55 56, en la derecha: 56 57 58
logical_and_expression (104)
    en la izquierda: 57 58, en la derecha: 58 59 60
logical_or_expression (105)
    en la izquierda: 59 60, en la derecha: 60 61 62
conditional_expression (106)
    en la izquierda: 61 62, en la derecha: 62 63 78
assignment_expression (107)
    en la izquierda: 63 64, en la derecha: 17 18 64 76 77 152
assignment_operator (108)
    en la izquierda: 65 66 67 68 69 70 71 72 73 74 75, en la derecha:
    64
expression (109)
    en la izquierda: 76 77, en la derecha: 9 11 62 77 180 181 182 184
    186 228
constant_expression (110)
    en la izquierda: 78, en la derecha: 116 122 167 212
declaration (111)
    en la izquierda: 79 80, en la derecha: 172 173 196
declaration_specifiers (112)
    en la izquierda: 81 82 83, en la derecha: 79 140 141 197 204
init_declarator_list (113)
    en la izquierda: 84 85, en la derecha: 85 202
init_declarator (114)
    en la izquierda: 86 87, en la derecha: 84 85
storage_class_specifier (115)
    en la izquierda: 88 89 90 91 92, en la derecha: 81
type_specifier (116)
    en la izquierda: 93 94 95 96 97 98 99 100 101 102 103, en la derecha:
    82 111
struct_or_union_specifier (117)
    en la izquierda: 104 105, en la derecha: 102
struct_or_union (118)
    en la izquierda: 106 107, en la derecha: 104 105
struct_declaration_list (119)
    en la izquierda: 108 109, en la derecha: 104 109
struct_declaration (120)
    en la izquierda: 110, en la derecha: 108 109
specifier_qualifier_list (121)
    en la izquierda: 111 112, en la derecha: 110 144 208
struct_declarator_list (122)
    en la izquierda: 113 114, en la derecha: 110 114
struct_declarator (123)
    en la izquierda: 115 116, en la derecha: 113 114
enum_specifier (124)
    en la izquierda: 117 118, en la derecha: 103
enumerator_list (125)
    en la izquierda: 119 120, en la derecha: 117 120
enumerator (126)
    en la izquierda: 121 122, en la derecha: 119 120
type_qualifier (127)
    en la izquierda: 123 124, en la derecha: 83 112 134 135
declarator (128)
    en la izquierda: 125 126, en la derecha: 86 87 115 128 140 197
    210
direct_declarator (129)
    en la izquierda: 127 128 129 130 131, en la derecha: 125 126 129
    130 131
pointer (130)
    en la izquierda: 132 133, en la derecha: 126 133 145 220
type_qualifier_list (131)
    en la izquierda: 134 135, en la derecha: 135 216
parameter_type_list (132)
    en la izquierda: 136 137, en la derecha: 130 222
parameter_list (133)
    en la izquierda: 138 139, en la derecha: 136 137 139
parameter_declaration (134)
    en la izquierda: 140 141, en la derecha: 138 139
identifier_list (135)
    en la izquierda: 142 143, en la derecha: 143 214
type_name (136)
    en la izquierda: 144, en la derecha: 24 32
abstract_declarator (137)
    en la izquierda: 145 146, en la derecha: 149 218
direct_abstract_declarator_opt (138)
    en la izquierda: 147 148, en la derecha: 150 151
direct_abstract_declarator (139)
    en la izquierda: 149 150 151, en la derecha: 146 148
initializer (140)
    en la izquierda: 152 153 154, en la derecha: 87 155 156
initializer_list (141)
    en la izquierda: 155 156, en la derecha: 153 154 156
statement (142)
    en la izquierda: 157 158 159 160 161 162 163, en la derecha: 165
    167 169 174 175 180 181 182 184 186 188
labeled_statement (143)
    en la izquierda: 165 167 169, en la derecha: 157
$@1 (144)
    en la izquierda: 164, en la derecha: 165
$@2 (145)
    en la izquierda: 166, en la derecha: 167
$@3 (146)
    en la izquierda: 168, en la derecha: 169
compound_statement (147)
    en la izquierda: 171, en la derecha: 158 197
$@4 (148)
    en la izquierda: 170, en la derecha: 171
declaration_list (149)
    en la izquierda: 172 173, en la derecha: 173 224
statement_list (150)
    en la izquierda: 174 175, en la derecha: 175 226
expression_statement (151)
    en la izquierda: 176, en la derecha: 159 188
selection_statement (152)
    en la izquierda: 178 180, en la derecha: 160
$@5 (153)
    en la izquierda: 177, en la derecha: 178
$@6 (154)
    en la izquierda: 179, en la derecha: 180
if_block (155)
    en la izquierda: 181 182, en la derecha: 178
iteration_statement (156)
    en la izquierda: 184 186 188, en la derecha: 161
$@7 (157)
    en la izquierda: 183, en la derecha: 184
$@8 (158)
    en la izquierda: 185, en la derecha: 186
$@9 (159)
    en la izquierda: 187, en la derecha: 188
jump_statement (160)
    en la izquierda: 189 190 191 192, en la derecha: 162
translation_unit (161)
    en la izquierda: 193 194, en la derecha: 0 194
external_declaration (162)
    en la izquierda: 195 196, en la derecha: 193 194
function_definition (163)
    en la izquierda: 197 198, en la derecha: 195
argument_expression_list_opt (164)
    en la izquierda: 199 200, en la derecha: 12
init_declarator_list_opt (165)
    en la izquierda: 201 202, en la derecha: 79
declaration_specifiers_opt (166)
    en la izquierda: 203 204, en la derecha: 81 82 83
identifier_opt (167)
    en la izquierda: 205 206, en la derecha: 104 117
specifier_qualifier_list_opt (168)
    en la izquierda: 207 208, en la derecha: 111 112
declarator_opt (169)
    en la izquierda: 209 210, en la derecha: 116
constant_expression_opt (170)
    en la izquierda: 211 212, en la derecha: 129 150
identifier_list_opt (171)
    en la izquierda: 213 214, en la derecha: 131
type_qualifier_list_opt (172)
    en la izquierda: 215 216, en la derecha: 132 133
abstract_declarator_opt (173)
    en la izquierda: 217 218, en la derecha: 141 144
pointer_opt (174)
    en la izquierda: 219 220, en la derecha: 146
parameter_type_list_opt (175)
    en la izquierda: 221 222, en la derecha: 151
declaration_list_opt (176)
    en la izquierda: 223 224, en la derecha: 171 197
statement_list_opt (177)
    en la izquierda: 225 226, en la derecha: 171
expression_opt (178)
    en la izquierda: 227 228, en la derecha: 176 188 192


estado 0

    0 $accept: . translation_unit $end

    error     desplazar e ir al estado 1
    TYPEDEF   desplazar e ir al estado 2
    STATIC    desplazar e ir al estado 3
    AUTO      desplazar e ir al estado 4
    REGISTER  desplazar e ir al estado 5
    EXTERN    desplazar e ir al estado 6
    VOID      desplazar e ir al estado 7
    CHAR      desplazar e ir al estado 8
    SHORT     desplazar e ir al estado 9
    INT       desplazar e ir al estado 10
    LONG      desplazar e ir al estado 11
    FLOAT     desplazar e ir al estado 12
    DOUBLE    desplazar e ir al estado 13
    SIGNED    desplazar e ir al estado 14
    UNSIGNED  desplazar e ir al estado 15
    CONST     desplazar e ir al estado 16
    VOLATILE  desplazar e ir al estado 17
    STRUCT    desplazar e ir al estado 18
    UNION     desplazar e ir al estado 19
    ENUM      desplazar e ir al estado 20

    declaration                ir al estado 21
    declaration_specifiers     ir al estado 22
    storage_class_specifier    ir al estado 23
    type_specifier             ir al estado 24
    struct_or_union_specifier  ir al estado 25
    struct_or_union            ir al estado 26
    enum_specifier             ir al estado 27
    type_qualifier             ir al estado 28
    translation_unit           ir al estado 29
    external_declaration       ir al estado 30
    function_definition        ir al estado 31


estado 1

   80 declaration: error . ';'
  198 function_definition: error . '}'

    ';'  desplazar e ir al estado 32
    '}'  desplazar e ir al estado 33


estado 2

   88 storage_class_specifier: TYPEDEF .

    $default  reduce usando la regla 88 (storage_class_specifier)


estado 3

   90 storage_class_specifier: STATIC .

    $default  reduce usando la regla 90 (storage_class_specifier)


estado 4

   91 storage_class_specifier: AUTO .

    $default  reduce usando la regla 91 (storage_class_specifier)


estado 5

   92 storage_class_specifier: REGISTER .

    $default  reduce usando la regla 92 (storage_class_specifier)


estado 6

   89 storage_class_specifier: EXTERN .

    $default  reduce usando la regla 89 (storage_class_specifier)


estado 7

   93 type_specifier: VOID .

    $default  reduce usando la regla 93 (type_specifier)


estado 8

   94 type_specifier: CHAR .

    $default  reduce usando la regla 94 (type_specifier)


estado 9

   95 type_specifier: SHORT .

    $default  reduce usando la regla 95 (type_specifier)


estado 10

   96 type_specifier: INT .

    $default  reduce usando la regla 96 (type_specifier)


estado 11

   97 type_specifier: LONG .

    $default  reduce usando la regla 97 (type_specifier)


estado 12

   98 type_specifier: FLOAT .

    $default  reduce usando la regla 98 (type_specifier)


estado 13

   99 type_specifier: DOUBLE .

    $default  reduce usando la regla 99 (type_specifier)


estado 14

  100 type_specifier: SIGNED .

    $default  reduce usando la regla 100 (type_specifier)


estado 15

  101 type_specifier: UNSIGNED .

    $default  reduce usando la regla 101 (type_specifier)


estado 16

  123 type_qualifier: CONST .

    $default  reduce usando la regla 123 (type_qualifier)


estado 17

  124 type_qualifier: VOLATILE .

    $default  reduce usando la regla 124 (type_qualifier)


estado 18

  106 struct_or_union: STRUCT .

    $default  reduce usando la regla 106 (struct_or_union)


estado 19

  107 struct_or_union: UNION .

    $default  reduce usando la regla 107 (struct_or_union)


estado 20

  117 enum_specifier: ENUM . identifier_opt '{' enumerator_list '}'
  118               | ENUM . IDENTIFIER

    IDENTIFIER  desplazar e ir al estado 34

    $default  reduce usando la regla 205 (identifier_opt)

    identifier_opt  ir al estado 35


estado 21

  196 external_declaration: declaration .

    $default  reduce usando la regla 196 (external_declaration)


estado 22

   79 declaration: declaration_specifiers . init_declarator_list_opt ';'
  197 function_definition: declaration_specifiers . declarator declaration_list_opt compound_statement

    IDENTIFIER  desplazar e ir al estado 36
    '('         desplazar e ir al estado 37
    '*'         desplazar e ir al estado 38

    $default  reduce usando la regla 201 (init_declarator_list_opt)

    init_declarator_list      ir al estado 39
    init_declarator           ir al estado 40
    declarator                ir al estado 41
    direct_declarator         ir al estado 42
    pointer                   ir al estado 43
    init_declarator_list_opt  ir al estado 44


estado 23

   81 declaration_specifiers: storage_class_specifier . declaration_specifiers_opt

    TYPEDEF   desplazar e ir al estado 2
    STATIC    desplazar e ir al estado 3
    AUTO      desplazar e ir al estado 4
    REGISTER  desplazar e ir al estado 5
    EXTERN    desplazar e ir al estado 6
    VOID      desplazar e ir al estado 7
    CHAR      desplazar e ir al estado 8
    SHORT     desplazar e ir al estado 9
    INT       desplazar e ir al estado 10
    LONG      desplazar e ir al estado 11
    FLOAT     desplazar e ir al estado 12
    DOUBLE    desplazar e ir al estado 13
    SIGNED    desplazar e ir al estado 14
    UNSIGNED  desplazar e ir al estado 15
    CONST     desplazar e ir al estado 16
    VOLATILE  desplazar e ir al estado 17
    STRUCT    desplazar e ir al estado 18
    UNION     desplazar e ir al estado 19
    ENUM      desplazar e ir al estado 20

    $default  reduce usando la regla 203 (declaration_specifiers_opt)

    declaration_specifiers      ir al estado 45
    storage_class_specifier     ir al estado 23
    type_specifier              ir al estado 24
    struct_or_union_specifier   ir al estado 25
    struct_or_union             ir al estado 26
    enum_specifier              ir al estado 27
    type_qualifier              ir al estado 28
    declaration_specifiers_opt  ir al estado 46


estado 24

   82 declaration_specifiers: type_specifier . declaration_specifiers_opt

    TYPEDEF   desplazar e ir al estado 2
    STATIC    desplazar e ir al estado 3
    AUTO      desplazar e ir al estado 4
    REGISTER  desplazar e ir al estado 5
    EXTERN    desplazar e ir al estado 6
    VOID      desplazar e ir al estado 7
    CHAR      desplazar e ir al estado 8
    SHORT     desplazar e ir al estado 9
    INT       desplazar e ir al estado 10
    LONG      desplazar e ir al estado 11
    FLOAT     desplazar e ir al estado 12
    DOUBLE    desplazar e ir al estado 13
    SIGNED    desplazar e ir al estado 14
    UNSIGNED  desplazar e ir al estado 15
    CONST     desplazar e ir al estado 16
    VOLATILE  desplazar e ir al estado 17
    STRUCT    desplazar e ir al estado 18
    UNION     desplazar e ir al estado 19
    ENUM      desplazar e ir al estado 20

    $default  reduce usando la regla 203 (declaration_specifiers_opt)

    declaration_specifiers      ir al estado 45
    storage_class_specifier     ir al estado 23
    type_specifier              ir al estado 24
    struct_or_union_specifier   ir al estado 25
    struct_or_union             ir al estado 26
    enum_specifier              ir al estado 27
    type_qualifier              ir al estado 28
    declaration_specifiers_opt  ir al estado 47


estado 25

  102 type_specifier: struct_or_union_specifier .

    $default  reduce usando la regla 102 (type_specifier)


estado 26

  104 struct_or_union_specifier: struct_or_union . identifier_opt '{' struct_declaration_list '}'
  105                          | struct_or_union . IDENTIFIER

    IDENTIFIER  desplazar e ir al estado 48

    $default  reduce usando la regla 205 (identifier_opt)

    identifier_opt  ir al estado 49


estado 27

  103 type_specifier: enum_specifier .

    $default  reduce usando la regla 103 (type_specifier)


estado 28

   83 declaration_specifiers: type_qualifier . declaration_specifiers_opt

    TYPEDEF   desplazar e ir al estado 2
    STATIC    desplazar e ir al estado 3
    AUTO      desplazar e ir al estado 4
    REGISTER  desplazar e ir al estado 5
    EXTERN    desplazar e ir al estado 6
    VOID      desplazar e ir al estado 7
    CHAR      desplazar e ir al estado 8
    SHORT     desplazar e ir al estado 9
    INT       desplazar e ir al estado 10
    LONG      desplazar e ir al estado 11
    FLOAT     desplazar e ir al estado 12
    DOUBLE    desplazar e ir al estado 13
    SIGNED    desplazar e ir al estado 14
    UNSIGNED  desplazar e ir al estado 15
    CONST     desplazar e ir al estado 16
    VOLATILE  desplazar e ir al estado 17
    STRUCT    desplazar e ir al estado 18
    UNION     desplazar e ir al estado 19
    ENUM      desplazar e ir al estado 20

    $default  reduce usando la regla 203 (declaration_specifiers_opt)

    declaration_specifiers      ir al estado 45
    storage_class_specifier     ir al estado 23
    type_specifier              ir al estado 24
    struct_or_union_specifier   ir al estado 25
    struct_or_union             ir al estado 26
    enum_specifier              ir al estado 27
    type_qualifier              ir al estado 28
    declaration_specifiers_opt  ir al estado 50


estado 29

    0 $accept: translation_unit . $end
  194 translation_unit: translation_unit . external_declaration

    $end      desplazar e ir al estado 51
    error     desplazar e ir al estado 1
    TYPEDEF   desplazar e ir al estado 2
    STATIC    desplazar e ir al estado 3
    AUTO      desplazar e ir al estado 4
    REGISTER  desplazar e ir al estado 5
    EXTERN    desplazar e ir al estado 6
    VOID      desplazar e ir al estado 7
    CHAR      desplazar e ir al estado 8
    SHORT     desplazar e ir al estado 9
    INT       desplazar e ir al estado 10
    LONG      desplazar e ir al estado 11
    FLOAT     desplazar e ir al estado 12
    DOUBLE    desplazar e ir al estado 13
    SIGNED    desplazar e ir al estado 14
    UNSIGNED  desplazar e ir al estado 15
    CONST     desplazar e ir al estado 16
    VOLATILE  desplazar e ir al estado 17
    STRUCT    desplazar e ir al estado 18
    UNION     desplazar e ir al estado 19
    ENUM      desplazar e ir al estado 20

    declaration                ir al estado 21
    declaration_specifiers     ir al estado 22
    storage_class_specifier    ir al estado 23
    type_specifier             ir al estado 24
    struct_or_union_specifier  ir al estado 25
    struct_or_union            ir al estado 26
    enum_specifier             ir al estado 27
    type_qualifier             ir al estado 28
    external_declaration       ir al estado 52
    function_definition        ir al estado 31


estado 30

  193 translation_unit: external_declaration .

    $default  reduce usando la regla 193 (translation_unit)


estado 31

  195 external_declaration: function_definition .

    $default  reduce usando la regla 195 (external_declaration)


estado 32

   80 declaration: error ';' .

    $default  reduce usando la regla 80 (declaration)


estado 33

  198 function_definition: error '}' .

    $default  reduce usando la regla 198 (function_definition)


estado 34

  118 enum_specifier: ENUM IDENTIFIER .
  206 identifier_opt: IDENTIFIER .

    '{'       reduce usando la regla 206 (identifier_opt)
    $default  reduce usando la regla 118 (enum_specifier)


estado 35

  117 enum_specifier: ENUM identifier_opt . '{' enumerator_list '}'

    '{'  desplazar e ir al estado 53


estado 36

  127 direct_declarator: IDENTIFIER .

    $default  reduce usando la regla 127 (direct_declarator)


estado 37

  128 direct_declarator: '(' . declarator ')'

    IDENTIFIER  desplazar e ir al estado 36
    '('         desplazar e ir al estado 37
    '*'         desplazar e ir al estado 38

    declarator         ir al estado 54
    direct_declarator  ir al estado 42
    pointer            ir al estado 43


estado 38

  132 pointer: '*' . type_qualifier_list_opt
  133        | '*' . type_qualifier_list_opt pointer

    CONST     desplazar e ir al estado 16
    VOLATILE  desplazar e ir al estado 17

    $default  reduce usando la regla 215 (type_qualifier_list_opt)

    type_qualifier           ir al estado 55
    type_qualifier_list      ir al estado 56
    type_qualifier_list_opt  ir al estado 57


estado 39

   85 init_declarator_list: init_declarator_list . ',' init_declarator
  202 init_declarator_list_opt: init_declarator_list .

    ','  desplazar e ir al estado 58

    $default  reduce usando la regla 202 (init_declarator_list_opt)


estado 40

   84 init_declarator_list: init_declarator .

    $default  reduce usando la regla 84 (init_declarator_list)


estado 41

   86 init_declarator: declarator .
   87                | declarator . '=' initializer
  197 function_definition: declaration_specifiers declarator . declaration_list_opt compound_statement

    error     desplazar e ir al estado 59
    TYPEDEF   desplazar e ir al estado 2
    STATIC    desplazar e ir al estado 3
    AUTO      desplazar e ir al estado 4
    REGISTER  desplazar e ir al estado 5
    EXTERN    desplazar e ir al estado 6
    VOID      desplazar e ir al estado 7
    CHAR      desplazar e ir al estado 8
    SHORT     desplazar e ir al estado 9
    INT       desplazar e ir al estado 10
    LONG      desplazar e ir al estado 11
    FLOAT     desplazar e ir al estado 12
    DOUBLE    desplazar e ir al estado 13
    SIGNED    desplazar e ir al estado 14
    UNSIGNED  desplazar e ir al estado 15
    CONST     desplazar e ir al estado 16
    VOLATILE  desplazar e ir al estado 17
    STRUCT    desplazar e ir al estado 18
    UNION     desplazar e ir al estado 19
    ENUM      desplazar e ir al estado 20
    '='       desplazar e ir al estado 60

    ','  reduce usando la regla 86 (init_declarator)
    ';'  reduce usando la regla 86 (init_declarator)
    '{'  reduce usando la regla 223 (declaration_list_opt)

    declaration                ir al estado 61
    declaration_specifiers     ir al estado 62
    storage_class_specifier    ir al estado 23
    type_specifier             ir al estado 24
    struct_or_union_specifier  ir al estado 25
    struct_or_union            ir al estado 26
    enum_specifier             ir al estado 27
    type_qualifier             ir al estado 28
    declaration_list           ir al estado 63
    declaration_list_opt       ir al estado 64


estado 42

  125 declarator: direct_declarator .
  129 direct_declarator: direct_declarator . '[' constant_expression_opt ']'
  130                  | direct_declarator . '(' parameter_type_list ')'
  131                  | direct_declarator . '(' identifier_list_opt ')'
